2008-01-09  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-shm.c: Create buffered surface in window format
                                     instead always in ARGB format.

2008-01-07  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-region.c:
    * src/ccm.h: Add ccm_region_get_xrectangles function
    
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap-shm.c: Use XFixesSetGCClipRegion instead copy all damaged
                            rectangles

2008-01-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/fade/Makefile.am:
    * plugins/freeze/Makefile.am:
    * plugins/menu-animation/Makefile.am:
    * plugins/opacity/Makefile.am:
    * plugins/shadow/Makefile.am:
    * src/Makefile.am: Use O3 compilation optimisation, can improve 
                       ccm_drawable_get_damage_path.

2008-01-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * data/Makefile.am: Fix schemas clean rules
    
    * plugins/shadow/ccm-shadow.c:
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-shm.c: Fixes memory leaks

2008-01-06  Nicolas Bruguier  <gandalfn@club-internet.fr>
    
    * configure.ac:
    * data/Makefile.am:
    * data/cairo-compmgr.desktop.in.in: Add desktop entry.
    
    * plugins/shadow/ccm-shadow.c: Use similar surface than window instead
                                   create an image surface.
    
    * src/ccm-drawable.c: Suppress damaged zone outside drawable geometry.
    
    * data/cairo-compmgr.schemas.in:
    * src/ccm-display.c:
    * src/ccm-display.h: Add use_buffered_pixmap option
    
    * src/ccm-window.c: Don't clip geometry made on damage.
    
    * src/Makefile.am:
    * src/ccm-pixmap-backend.c:
    * src/ccm-pixmap-backend.h:
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-image.h:
    * src/ccm-pixmap-buffered-shm.c:
    * src/ccm-pixmap-buffered-shm.h:
    * src/ccm-pixmap-image.c: