@@ -34,8 +34,15 @@
 
 G_DEFINE_TYPE (CCMPixmapBufferedShm, ccm_pixmap_buffered_shm, CCM_TYPE_PIXMAP_SHM);
 
+enum
+{
+    PROP_0,
+	PROP_BUFFERED
+};
+
 struct _CCMPixmapBufferedShmPrivate
 {
+	gboolean			 buffered;
 	cairo_surface_t*	 surface;
 	CCMRegion*			 need_to_sync;
 };
@@ -47,10 +54,53 @@ static void ccm_pixmap_buffered_shm_repair (CCMDrawable* drawable, CCMRegion* ar
 static cairo_surface_t* ccm_pixmap_buffered_shm_get_surface (CCMDrawable* drawable);
 
 static void
+ccm_pixmap_buffered_shm_set_property(GObject *object,
+									 guint prop_id,
+									 const GValue *value,
+									 GParamSpec *pspec)
+{
+	CCMPixmapBufferedShm* self = CCM_PIXMAP_BUFFERED_SHM(object);
+    
+	switch (prop_id)
+    {
+    	case PROP_BUFFERED:
+		{
+			gboolean val = g_value_get_boolean (value);
+			
+			if (self->priv->buffered != val)
+			{
+				if (val) 
+				{
+					ccm_drawable_damage(CCM_DRAWABLE(CCM_PIXMAP(self)->window));
+				}
+				else 
+				{
+					if (self->priv->need_to_sync) 
+					{
+						ccm_region_destroy (self->priv->need_to_sync);
+						self->priv->need_to_sync = NULL;
+					}
+					if (self->priv->surface)
+					{
+						cairo_surface_destroy (self->priv->surface);
+						self->priv->surface = NULL;
+					}
+				}
+			}
+			self->priv->buffered = val;
+		}
+		break;
+		default:
+		break;
+    }
+}
+
+static void
 ccm_pixmap_buffered_shm_init (CCMPixmapBufferedShm *self)
 {
 	self->priv = CCM_PIXMAP_BUFFERED_SHM_GET_PRIVATE(self);
 	
+	self->priv->buffered = TRUE;
 	self->priv->surface = NULL;
 	self->priv->need_to_sync = NULL;
 }
@@ -73,9 +123,18 @@ ccm_pixmap_buffered_shm_class_init (CCMPixmapBufferedShmClass *klass)
 	
 	g_type_class_add_private (klass, sizeof (CCMPixmapBufferedShmPrivate));
 
+	object_class->set_property = ccm_pixmap_buffered_shm_set_property;
+	
 	CCM_DRAWABLE_CLASS(klass)->get_surface = ccm_pixmap_buffered_shm_get_surface;
 	CCM_DRAWABLE_CLASS(klass)->repair = ccm_pixmap_buffered_shm_repair;
 	
+	g_object_class_install_property(object_class, PROP_BUFFERED,
+		g_param_spec_boolean("buffered",
+		 					 "Buffered",
+			     			 "Set if pixmap is buffered",
+							 FALSE,
+			     			 G_PARAM_WRITABLE));
+    
 	object_class->finalize = ccm_pixmap_buffered_shm_finalize;
 }
 
@@ -90,10 +149,13 @@ ccm_pixmap_buffered_shm_repair (CCMDrawable* drawable, CCMRegion* area)
 	CCM_DRAWABLE_CLASS(ccm_pixmap_buffered_shm_parent_class)->repair(drawable, 
 																  area);
 	
-	if (self->priv->need_to_sync)
-		ccm_region_union (self->priv->need_to_sync, area);
-	else
-		self->priv->need_to_sync = ccm_region_copy (area);
+	if (self->priv->buffered)
+	{
+		if (self->priv->need_to_sync)
+			ccm_region_union (self->priv->need_to_sync, area);
+		else
+			self->priv->need_to_sync = ccm_region_copy (area);
+	}
 }
 
 static void
@@ -102,9 +164,10 @@ ccm_pixmap_buffered_shm_sync(CCMPixmapBufferedShm* self, cairo_surface_t* surfac
 	g_return_if_fail(self != NULL);
 	g_return_if_fail(surface != NULL);
 	
-	if (self->priv->need_to_sync)
+	if (self->priv->buffered && self->priv->need_to_sync)
 	{
 		gdouble width, height;
+		gboolean sync_all = FALSE;
 		
 		width = cairo_image_surface_get_width (surface);
 		height = cairo_image_surface_get_height (surface);
@@ -130,6 +193,7 @@ ccm_pixmap_buffered_shm_sync(CCMPixmapBufferedShm* self, cairo_surface_t* surfac
 																	width, 
 																	height);
 				cairo_surface_destroy (target);
+				sync_all = TRUE;
 			}
 		}
 		if (self->priv->surface)
@@ -138,13 +202,16 @@ ccm_pixmap_buffered_shm_sync(CCMPixmapBufferedShm* self, cairo_surface_t* surfac
 			cairo_rectangle_t clipbox;
 			
 			cr = cairo_create(self->priv->surface);
-				
-			ccm_region_get_clipbox (self->priv->need_to_sync, &clipbox);
-			cairo_rectangle (cr, clipbox.x, clipbox.y, 
-							 clipbox.width, clipbox.height);
+			
+			if (!sync_all)
+			{
+				ccm_region_get_clipbox (self->priv->need_to_sync, &clipbox);
+				cairo_rectangle (cr, clipbox.x, clipbox.y, 
+								 clipbox.width, clipbox.height);
+				cairo_clip(cr);
+			}
 			ccm_region_destroy (self->priv->need_to_sync);
 			self->priv->need_to_sync = NULL;
-			cairo_clip(cr);
 			
 			if (ccm_window_get_format (CCM_PIXMAP(self)->window) == CAIRO_FORMAT_ARGB32)
 			{
@@ -167,7 +234,7 @@ ccm_pixmap_buffered_shm_get_surface (CCMDrawable* drawable)
 	CCMPixmapBufferedShm *self = CCM_PIXMAP_BUFFERED_SHM(drawable);
 	cairo_surface_t* surface = NULL;
 	
-	if (!ccm_drawable_is_damaged (drawable))
+	if (self->priv->buffered && !ccm_drawable_is_damaged (drawable))
 	{
 		surface = CCM_DRAWABLE_CLASS(ccm_pixmap_buffered_shm_parent_class)->get_surface(drawable);
 		if (surface && CCM_PIXMAP(self)->window->is_viewable)
