@@ -1036,7 +1036,7 @@ ccm_screen_new(CCMDisplay* display, guint number)
 	refresh_rate = ccm_config_get_integer(self->priv->options[CCM_SCREEN_REFRESH_RATE]);
 	if (!refresh_rate) refresh_rate = 60;
 	
-	self->priv->id_paint = g_timeout_add_full(G_PRIORITY_DEFAULT, 
+	self->priv->id_paint = g_timeout_add_full(G_PRIORITY_HIGH, 
 											  1000/refresh_rate, 
 											  (GSourceFunc)ccm_screen_paint, 
 											  self, NULL);
